[gd_scene load_steps=2 format=2]

[ext_resource path="res://atividade02.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="tela" type="ColorRect" parent="."]
margin_left = 120.0
margin_top = 22.0
margin_right = 811.0
margin_bottom = 288.0

[node name="Button" type="Button" parent="."]
margin_left = 119.0
margin_top = 318.0
margin_right = 288.0
margin_bottom = 417.0
text = "EXERCÍCIO 1"

[node name="Button2" type="Button" parent="."]
margin_left = 336.0
margin_top = 317.0
margin_right = 501.0
margin_bottom = 419.0
text = "EXERCÍCIO 2"

[node name="Button3" type="Button" parent="."]
margin_left = 553.0
margin_top = 315.0
margin_right = 734.0
margin_bottom = 419.0
text = "EXERCÍCIO 3"

[node name="Button4" type="Button" parent="."]
margin_left = 112.0
margin_top = 454.0
margin_right = 293.0
margin_bottom = 559.0
text = "EXERCÍCIO 4"

[node name="Saida" type="Label" parent="."]
margin_left = 132.0
margin_top = 31.0
margin_right = 799.0
margin_bottom = 278.0
custom_colors/font_color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
